force-app/main/default/objects/Opportunity_Certificate__c/Opportunity_Certificate__c.object-meta.xml
<CustomObject>
    <label>Opportunity Certificate</label>
    <nameField>
        <displayFormat>OC-{0000}</displayFormat>
        <label>Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Certificates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>