force-app/main/default/objects/Opportunity_Certificate__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Certificates</relationshipLabel>
    <relationshipName>Opportunity_Certificates</relationshipName>
    <type>Lookup</type>
</CustomField>