force-app/main/default/objects/Opportunity_Certificate__c/fields/Account_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Address__c</fullName>
    <formula>IF( 
	ISBLANK(Certified_Customer_Name__c)  ,  
	( Customer__r.BillingStreet &amp; BR() &amp; Customer__r.BillingCity &amp;&apos;, &apos;&amp; Customer__r.BillingState &amp;&apos; &apos;&amp;  Customer__r.BillingPostalCode &amp; BR() &amp; Customer__r.BillingCountry ),  
	( Certified_Customer_Name__r.BillingStreet &amp; BR() &amp; Certified_Customer_Name__r.BillingCity &amp;&apos;, &apos;&amp; Certified_Customer_Name__r.BillingState &amp;&apos; &apos;&amp;  Certified_Customer_Name__r.BillingPostalCode &amp; BR() &amp;
	Certified_Customer_Name__r.BillingCountry ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Address</label>
    <type>Text</type>
</CustomField>