force-app/main/default/objects/Opportunity_Certificate__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FSC</description>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Certificates</relationshipName>
    <type>Lookup</type>
</CustomField>