force-app/main/default/objects/Opportunity_Certificate__c/fields/Account_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Shipping_Address__c</fullName>
    <formula>IF( ISBLANK(Certified_Customer_Name__c)  ,  
(  Customer__r.ShippingStreet  &amp; BR()&amp; Customer__r.ShippingCity &amp;&apos;, &apos; &amp; Customer__r.ShippingState &amp; &apos; &apos; &amp;  Customer__r.ShippingPostalCode &amp; BR() &amp; Customer__r.ShippingCountry ),  
( Certified_Customer_Name__r.ShippingStreet &amp; BR() &amp; Certified_Customer_Name__r.ShippingCity &amp;&apos;, &apos;&amp; Certified_Customer_Name__r.ShippingState &amp; &apos; &apos; &amp;  Certified_Customer_Name__r.ShippingPostalCode &amp; BR() &amp;
Certified_Customer_Name__r.ShippingCountry ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Shipping Address</label>
    <type>Text</type>
</CustomField>