force-app/main/default/objects/Opportunity_Certificate__c/fields/Account_Sites__c.field-meta.xml
<CustomField>
    <fullName>Account_Sites__c</fullName>
    <label>Account Sites</label>
    <type>TextArea</type>
</CustomField>