force-app/main/default/objects/Opportunity_Certificate__c/fields/Active_Ingredient_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Active_Ingredient_Product_Name__c</fullName>
    <label>Active Ingredient/ Product Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>