force-app/main/default/objects/Opportunity_Certificate__c/fields/Addendum_Description__c.field-meta.xml
<CustomField>
    <fullName>Addendum_Description__c</fullName>
    <label>Addendum Description</label>
    <type>TextArea</type>
</CustomField>