force-app/main/default/objects/Opportunity_Certificate__c/fields/Additional_Sites__c.field-meta.xml
<CustomField>
    <fullName>Additional_Sites__c</fullName>
    <label>Additional Sites</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>