force-app/main/default/objects/Opportunity_Certificate__c/fields/AdditionalModules__c.field-meta.xml
<CustomField>
    <fullName>AdditionalModules__c</fullName>
    <label>Additional Modules</label>
    <type>TextArea</type>
</CustomField>