force-app/main/default/objects/Opportunity_Certificate__c/fields/Affiliate__c.field-meta.xml
<CustomField>
    <fullName>Affiliate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FSC</description>
    <label>Affiliate</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Certificates (Affiliate)</relationshipLabel>
    <relationshipName>Opportunity_Certificates5</relationshipName>
    <type>Lookup</type>
</CustomField>