force-app/main/default/objects/Opportunity_Certificate__c/fields/Annex__c.field-meta.xml
<CustomField>
    <fullName>Annex__c</fullName>
    <label>Annex</label>
    <type>TextArea</type>
</CustomField>