force-app/main/default/objects/Opportunity_Certificate__c/fields/ANNEX_for_GGN__c.field-meta.xml
<CustomField>
    <fullName>ANNEX_for_GGN__c</fullName>
    <label>ANNEX for GGN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>