force-app/main/default/objects/Opportunity_Certificate__c/fields/Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_Date__c</fullName>
    <label>Anniversary/Renewal Date</label>
    <type>Date</type>
</CustomField>