force-app/main/default/objects/Opportunity_Certificate__c/fields/AnnouncedUnannounced__c.field-meta.xml
<CustomField>
    <fullName>AnnouncedUnannounced__c</fullName>
    <label>Announced/Unannounced?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Announced</fullName>
            </value>
            <value>
                <fullName>Unannounced</fullName>
            </value>
            <value>
                <fullName>Reissue after extension to scope</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>