force-app/main/default/objects/Opportunity_Certificate__c/fields/Annual_Administration_Fee_AAF__c.field-meta.xml
<CustomField>
    <fullName>Annual_Administration_Fee_AAF__c</fullName>
    <description>FSC</description>
    <label>Annual Administration Fee (AAF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>