force-app/main/default/objects/Opportunity_Certificate__c/fields/Area_In__c.field-meta.xml
<CustomField>
    <fullName>Area_In__c</fullName>
    <description>FSC</description>
    <label>Area In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acres</fullName>
            </value>
            <value>
                <fullName>Hectares</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>