force-app/main/default/objects/Opportunity_Certificate__c/fields/ASC_Chain_of_Custody__c.field-meta.xml
<CustomField>
    <fullName>ASC_Chain_of_Custody__c</fullName>
    <label>ASC Chain of Custody</label>
    <length>255</length>
    <type>Text</type>
</CustomField>