force-app/main/default/objects/Opportunity_Certificate__c/fields/Audit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Audit_Percentage__c</fullName>
    <label>Audit Percentage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>