force-app/main/default/objects/Opportunity_Certificate__c/fields/Audit_Programme__c.field-meta.xml
<CustomField>
    <fullName>Audit_Programme__c</fullName>
    <label>Audit Programme</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>