force-app/main/default/objects/Opportunity_Certificate__c/fields/Auditor_Number__c.field-meta.xml
<CustomField>
    <fullName>Auditor_Number__c</fullName>
    <label>Auditor Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>