force-app/main/default/objects/Opportunity_Certificate__c/fields/Authorized_signatory_name__c.field-meta.xml
<CustomField>
    <fullName>Authorized_signatory_name__c</fullName>
    <label>Authorized signatory name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>