force-app/main/default/objects/Opportunity_Certificate__c/fields/Authorized_signature__c.field-meta.xml
<CustomField>
    <fullName>Authorized_signature__c</fullName>
    <label>Authorized signature</label>
    <length>30</length>
    <type>Text</type>
</CustomField>