force-app/main/default/objects/Opportunity_Certificate__c/fields/Boreal_NF_Acres__c.field-meta.xml
<CustomField>
    <fullName>Boreal_NF_Acres__c</fullName>
    <description>FSC</description>
    <label>Boreal-NF (Acres)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>