force-app/main/default/objects/Opportunity_Certificate__c/fields/Boreal_SLIMF_Hectares__c.field-meta.xml
<CustomField>
    <fullName>Boreal_SLIMF_Hectares__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FSC</description>
    <label>Boreal-SLIMF (Hectares)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>