force-app/main/default/objects/Opportunity_Certificate__c/fields/Certificate__c.field-meta.xml
<CustomField>
    <fullName>Certificate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certificate</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Certificate__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Certificate__c</referenceTo>
    <relationshipLabel>Opportunity Certificates</relationshipLabel>
    <relationshipName>Opportunity_Certificates</relationshipName>
    <type>Lookup</type>
</CustomField>