force-app/main/default/objects/Opportunity_Certificate__c/fields/Certificate_Code__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Code__c</fullName>
    <label>Certificate Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>