force-app/main/default/objects/Opportunity_Certificate__c/fields/Certificate_Generated__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Generated__c</fullName>
    <label>Certificate Generated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>