force-app/main/default/objects/Opportunity_Certificate__c/fields/Certificate_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Issue_Date__c</fullName>
    <label>Certificate Issue Date</label>
    <type>Date</type>
</CustomField>