force-app/main/default/objects/Opportunity_Certificate__c/fields/Certificate_Option__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Option__c</fullName>
    <label>Certificate Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>