force-app/main/default/objects/Opportunity_Certificate__c/fields/Certificate_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Signed_Date__c</fullName>
    <label>Certificate Signed Date</label>
    <type>Date</type>
</CustomField>