force-app/main/default/objects/Opportunity_Certificate__c/fields/Certificate_Status__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Status__c</fullName>
    <label>Certificate Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issued</fullName>
            </value>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Transferred in</fullName>
            </value>
            <value>
                <fullName>Transferred out</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Terminated and blocked</fullName>
            </value>
            <value>
                <fullName>Suspended and blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>