force-app/main/default/objects/Opportunity_Certificate__c/fields/Certificate_Type__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Type__c</fullName>
    <inlineHelpText>Should reflect ownership from perspective of the Opportunity -- Account-Owned is owned by same Account as Opportunity, Third-Party is owned by a different Account than the Opportunity (usually for Private Label opportunity).</inlineHelpText>
    <label>Certificate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account-Owned</fullName>
            </value>
            <value>
                <fullName>Third Party Manufacturer</fullName>
            </value>
            <value>
                <fullName>Third Party Private Label</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>