force-app/main/default/objects/Opportunity_Certificate__c/fields/Certification_Manager__c.field-meta.xml
<CustomField>
    <fullName>Certification_Manager__c</fullName>
    <description>FSC</description>
    <label>Certification Manager</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.	SFI – NSF Managed</fullName>
            </value>
            <value>
                <fullName>2.	SFI – SCS Managed</fullName>
            </value>
            <value>
                <fullName>PEFC – Intertek Sweden</fullName>
            </value>
            <value>
                <fullName>RPP – SCS Managed</fullName>
            </value>
            <value>
                <fullName>Intertek Bulgaria</fullName>
            </value>
            <value>
                <fullName>Intertek Japan</fullName>
            </value>
            <value>
                <fullName>FTES</fullName>
            </value>
            <value>
                <fullName>GPC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>