force-app/main/default/objects/Opportunity_Certificate__c/fields/Certification_Type__c.field-meta.xml
<CustomField>
    <fullName>Certification_Type__c</fullName>
    <label>Certification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Unannounced</fullName>
            </value>
            <value>
                <fullName>Re-Certification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>