force-app/main/default/objects/Opportunity_Certificate__c/fields/Certified_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Certified_Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field added to relate an account to print the address on the certificate - Case Number 00001457</description>
    <label>Certified Address</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Certificates (Certified Customer Name)</relationshipLabel>
    <relationshipName>Opportunity_Certificates3</relationshipName>
    <type>Lookup</type>
</CustomField>