force-app/main/default/objects/Opportunity_Certificate__c/fields/Certified_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Certified_Period_End_Date__c</fullName>
    <label>Certified Period End Date</label>
    <type>Date</type>
</CustomField>