force-app/main/default/objects/Opportunity_Certificate__c/fields/Certified_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Certified_Period_Start_Date__c</fullName>
    <label>Certified Period Start Date</label>
    <type>Date</type>
</CustomField>