force-app/main/default/objects/Opportunity_Certificate__c/fields/Certified_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Certified_Product_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Certified Product Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>