force-app/main/default/objects/Opportunity_Certificate__c/fields/CertifiedArea__c.field-meta.xml
<CustomField>
    <fullName>CertifiedArea__c</fullName>
    <description>for RSPO</description>
    <label>Certified Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>