force-app/main/default/objects/Opportunity_Certificate__c/fields/Check_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Check_Compliance__c</fullName>
    <formula>IF( INCLUDES(Complaince_category__c, &apos;US-CA Equivalency&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Compliance</label>
    <type>Checkbox</type>
</CustomField>