force-app/main/default/objects/Opportunity_Certificate__c/fields/Community_Forestry_NF_Acres__c.field-meta.xml
<CustomField>
    <fullName>Community_Forestry_NF_Acres__c</fullName>
    <label>Community Forestry-NF (Acres)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>