force-app/main/default/objects/Opportunity_Certificate__c/fields/Community_Forestry_NF_Hectares__c.field-meta.xml
<CustomField>
    <fullName>Community_Forestry_NF_Hectares__c</fullName>
    <description>FSC</description>
    <label>Community Forestry-NF (Hectares)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>