force-app/main/default/objects/Opportunity_Certificate__c/fields/Community_Forestry_NF_In_Acres__c.field-meta.xml
<CustomField>
    <fullName>Community_Forestry_NF_In_Acres__c</fullName>
    <description>FSC</description>
    <formula>Community_Forestry_NF_Hectares__c  *  $CustomMetadata.FSC_Area_Configuration__mdt.Acer.Acre__c</formula>
    <label>Community Forestry-NF (In Acres)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>