force-app/main/default/objects/Opportunity_Certificate__c/fields/Community_Forestry_NF_In_Hectares__c.field-meta.xml
<CustomField>
    <fullName>Community_Forestry_NF_In_Hectares__c</fullName>
    <description>FSC</description>
    <formula>Community_Forestry_NF_Acres__c  / 2.471</formula>
    <label>Community Forestry-NF (In Hectares)</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>