force-app/main/default/objects/Opportunity_Certificate__c/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <description>FSC</description>
    <formula>IF ( INCLUDES(Certificate__r.SCS_Certification_Type__c, &apos;Manufacturer&apos;),&apos;Manufacturer;&apos;,null) &amp;
IF ( INCLUDES(Certificate__r.SCS_Certification_Type__c, &apos;Trader&apos;),&apos;Trader&apos;,null )</formula>
    <label>Company Type</label>
    <type>Text</type>
</CustomField>