force-app/main/default/objects/Opportunity_Certificate__c/fields/Complaince_category__c.field-meta.xml
<CustomField>
    <fullName>Complaince_category__c</fullName>
    <label>Complaince category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USDA-NOP</fullName>
            </value>
            <value>
                <fullName>US-CA Equivalency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>