force-app/main/default/objects/Opportunity_Certificate__c/fields/Completion_of_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Completion_of_Assessment__c</fullName>
    <label>Completion of Assessment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field Operations and Harvesting Harmonized Food Safety Standard</fullName>
            </value>
            <value>
                <fullName>Post-Harvest Operations Harmonized Food Safety Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>