force-app/main/default/objects/Opportunity_Certificate__c/fields/Conservation_Purposes_NF_Hectares__c.field-meta.xml
<CustomField>
    <fullName>Conservation_Purposes_NF_Hectares__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FSC</description>
    <label>Conservation Purposes-NF (Hectares)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>