force-app/main/default/objects/Opportunity_Certificate__c/fields/Conservation_Purposes_NF_In_Hectare__c.field-meta.xml
<CustomField>
    <fullName>Conservation_Purposes_NF_In_Hectare__c</fullName>
    <description>FSC</description>
    <formula>Conservation_Purposes_NF_Acres__c  / 2.471</formula>
    <label>Conservation Purposes-NF (In Hectares)</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>