force-app/main/default/objects/Opportunity_Certificate__c/fields/Conservation_Purposes_SLIMF_In_Hectares__c.field-meta.xml
<CustomField>
    <fullName>Conservation_Purposes_SLIMF_In_Hectares__c</fullName>
    <description>FSC</description>
    <formula>Conservation_Purposes_SLIMF_Acres__c  /  $CustomMetadata.FSC_Area_Configuration__mdt.Acer.Acre__c</formula>
    <label>Conservation Purposes-SLIMF(In Hectares)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>