force-app/main/default/objects/Opportunity_Certificate__c/fields/Cont_Wood_Sales__c.field-meta.xml
<CustomField>
    <fullName>Cont_Wood_Sales__c</fullName>
    <description>FSC</description>
    <label>Cont Wood Sales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sells CW</fullName>
            </value>
            <value>
                <fullName>Does not sell CW</fullName>
            </value>
            <value>
                <fullName>No CW Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>