force-app/main/default/objects/Opportunity_Certificate__c/fields/Controlled_Wood_Number__c.field-meta.xml
<CustomField>
    <fullName>Controlled_Wood_Number__c</fullName>
    <description>FSC</description>
    <formula>IF( Sells_CW__c , &apos;&apos;  , &apos;&apos;)</formula>
    <label>Controlled Wood Number</label>
    <type>Text</type>
</CustomField>