force-app/main/default/objects/Opportunity_Certificate__c/fields/ContWoodSales__c.field-meta.xml
<CustomField>
    <fullName>ContWoodSales__c</fullName>
    <description>FSC</description>
    <formula>CASE( Cont_Wood_Sales__c ,&apos;Sells CW&apos;,&apos;1&apos;,&apos;Does not sell CW&apos; ,&apos;2&apos;,&apos;No CW Certificate&apos;,&apos;3&apos;,&apos;0&apos;)</formula>
    <label>ContWoodSales</label>
    <type>Text</type>
</CustomField>