force-app/main/default/objects/Opportunity_Certificate__c/fields/Countries_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Countries_of_Origin__c</fullName>
    <description>FSC</description>
    <label>Countries of Origin</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>