force-app/main/default/objects/Opportunity_Certificate__c/fields/Covered_by_PCHF__c.field-meta.xml
<CustomField>
    <fullName>Covered_by_PCHF__c</fullName>
    <label>Covered by PCHF</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>