force-app/main/default/objects/Opportunity_Certificate__c/fields/Covered_by_PSR__c.field-meta.xml
<CustomField>
    <fullName>Covered_by_PSR__c</fullName>
    <label>Covered by PSR</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>