force-app/main/default/objects/Opportunity_Certificate__c/fields/CSPK_Projected_Tonnage_Total_module__c.field-meta.xml
<CustomField>
    <fullName>CSPK_Projected_Tonnage_Total_module__c</fullName>
    <label>CSPK Projected Tonnage Total (module)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>