force-app/main/default/objects/Opportunity_Certificate__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Certificates (Customer)</relationshipLabel>
    <relationshipName>Opportunity_Certificates1</relationshipName>
    <type>Lookup</type>
</CustomField>