force-app/main/default/objects/Opportunity_Certificate__c/fields/Customer_Customer_Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Customer_Site_Address__c</fullName>
    <formula>IF(NOT(ISBLANK(Account__c)), Account__r.ShippingCityStateandCountry__c, Customer__r.Billing_City_State_and_Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer/Customer Site Address</label>
    <type>Text</type>
</CustomField>