force-app/main/default/objects/Opportunity_Certificate__c/fields/Date_of_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Assessment__c</fullName>
    <label>Date of Assessment</label>
    <type>Date</type>
</CustomField>