force-app/main/default/objects/Opportunity_Certificate__c/fields/Date_of_Attestation_Decision__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Attestation_Decision__c</fullName>
    <label>Date of Attestation Decision</label>
    <type>Date</type>
</CustomField>